[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stein-tools"
version = "0.0.1"
authors = [
  { name="Jae Bong Seok", email="stien5@outlook.com" },
]
description = "A package with a bundle of functions for serveral projects"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/stein5/stein-tools"
"Bug Tracker" = "https://github.com/stein5/stein-tools/issues"
